--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,17 @@
 <h1>Covid 19 in India</h1>
-<!-- This nav gives you links to click, which tells the router which route to use (defined in the routes constant in  AppRoutingModule) -->
+
 <nav>
-  <ul>
-    <li><a routerLink="/home-component" routerLinkActive="active">Home </a></li>
-    <li><a routerLink="/info-component" routerLinkActive="active">Covid 19 Info </a></li>
-    <li><a routerLink="/stats-component" routerLinkActive="active">statistics  </a></li>
-  </ul>
+<ul class="nav flex-column">
+  <li class="nav-item" id="home">
+    <a class="nav-link active" routerLink="/home-component" routerLinkActive="active">Home</a>
+  </li>
+  <li class="nav-item" id="info">
+    <a class="nav-link" routerLink="/info-component" routerLinkActive="active">Covid 19 Info </a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" routerLink="/stats-component" routerLinkActive="active">statistics</a>
+  </li>
+  
+</ul>
 </nav>
-<!-- The routed views render in the <router-outlet>-->
 <router-outlet></router-outlet>
